--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "node-ts-cache": "^4.4.0",
+    "node-ts-cache-storage-memory": "^4.4.0"
   }
 }
